test/expected/prepass_conditional.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "false"]
  [CompoundListCondition, &&]
    [SimpleCommand "nosuchcmd_xyz"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "done"]
[Word
  Unquoted "false"
]
[Word
  Unquoted "nosuchcmd_xyz"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "done"
]
shit: 2:10: error: Command 'nosuchcmd_xyz' was not found.
     2 |  false && nosuchcmd_xyz
       |           ^~~~~~~~~~~~~ here.
[Code 1]
